[tool.poetry]
name = "wyc"
version = "1.1.0"
description = "Create WebComponent (html Custom Element) from a python file"
authors = ["manatlan <manatlan@gmail.com>"]
#include = ["LICENSE"]
readme = 'README.md'
keywords=['web component', 'custom element', 'es5', 'javascript', 'web', 'html', 'es2015', 'template', "transpile"]
homepage = "https://github.com/manatlan/wyc"
repository = "https://github.com/manatlan/wyc"
documentation = "https://github.com/manatlan/wyc"
license="MIT"
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.7"
pscript = "^0.7.7"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry>=1.5.1"]
build-backend = "poetry.masonry.api"
